--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<h1>GEOG370 Homework 4: UNC Georeferencing</h1>
+<img src="./HW_4_Map.png" width="500px">
+<a href="https://lnbui.github.io/lnbui_geog370_HW4/tiles/hw4_cubic_poly1.html">HTML Tile Link</a>
+<a href="https://github.com/lnbui/lnbui_geog370_HW4/blob/main/GCP_chapelhill_final.txt">Georeferenced Points Text File</a>
+<a href="https://github.com/lnbui/lnbui_geog370_HW4/tree/main/tiles/16">Tile Folders Link</a>
+</body>
+</html>
