--- a/tiles/hw4_cubic_poly1.html
+++ b/tiles/hw4_cubic_poly1.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([35.904789267250706, -79.04996749916616], 12.0);
-      L.tileLayer('./tiles/hw4_cubic_poly1/{z}/{x}/{y}.png', {
+      L.tileLayer('./{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 12,
         tms: false,
